# quadpy

./: .flake8  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  test.yml
quadpy/: __about__.py  __init__.py  _cli.py  _optimize.py  _scipy_compat.py  circle.py  disk.py  helpers.py  hexahedron.py  line_segment.py  pyramid.py  quadrilateral.py  sphere.py  tanh_sinh.py  tetrahedron.py  triangle.py  wedge.py
quadpy/ball/: __init__.py  _ditkin.py  _hammer_stroud.py  _helpers.py  _mysovskih.py  _stroud.py  ditkin.py  hammer_stroud.py  helpers.py  mysovskih.py  stroud.py  tools.py
quadpy/c1/: _adaptive.py  _chebyshev_gauss.py  _clenshaw_curtis.py  _fejer.py  _gauss_jacobi.py  _gauss_kronrod.py  _gauss_legendre.py  _gauss_lobatto.py  _gauss_patterson.py  _gauss_radau.py  _helpers.py  _midpoint.py  _newton_cotes.py  _tools.py  _trapezoidal.py
quadpy/c2/: __init__.py  _albrecht_collatz.py  _burnside.py  _cohen_gismalla.py  _cools_haegemans_1985.py  _cools_haegemans_1988.py  _dunavant.py  _franke.py  _get_good_scheme.py  _haegemans_piessens.py  _hammer_stroud.py  _helpers.py  _irwin.py  _maxwell.py  _meister.py  _miller.py  _morrow_patterson.py  _phillips.py  _piessens_haegemans.py  _product.py  _rabinowitz_richter.py  _schmid.py  _stroud.py  _tyler.py  _waldron.py  _wissmann_becker.py
quadpy/c3/: __init__.py  _albrecht_collatz.py  _classical.py  _hammer_stroud.py  _hammer_wymore.py  _helpers.py  _mustard_lyness_blatt.py  _product.py  _sadowsky.py  _sarma_stroud.py  _stroud.py  _stroud_1967.py  _tyler.py
quadpy/circle/: __init__.py  _helpers.py  _krylov.py  equidistant.py  helpers.py  krylov.py  tools.py
quadpy/cn/: __init__.py  _cools_haegemans.py  _dobrodeev1970.py  _dobrodeev1978.py  _dobrodeev_1970.py  _dobrodeev_1978.py  _ewing.py  _hammer_stroud.py  _helpers.py  _mcnamee_stenger.py  _mustard_lyness_blatt.py  _phillips.py  _stroud.py  _stroud_1957.py  _stroud_1966.py  _stroud_1968.py  _thacher.py  _tyler.py
quadpy/disk/: __init__.py  _albrecht.py  _albrecht_collatz.py  _cools_haegemans.py  _cools_kim.py  _haegemans_piessens.py  _hammer_stroud.py  _helpers.py  _kim_song.py  _lether.py  _mysovskih.py  _peirce_1956.py  _peirce_1957.py  _piessens_haegemans.py  _rabinowitz_richter.py  _radon.py  _stroud.py  _wissmann_becker.py  albrecht.py  albrecht_collatz.py  cools_haegemans.py  cools_kim.py  haegemans_piessens.py  hammer_stroud.py  helpers.py  (+11 more)
quadrature/: __about__.py  __init__.py  circle.py  disk.py  helpers.py  hexahedron.py  line.py  line_segment.py  pyramid.py  quadrilateral.py  sphere.py  tetrahedron.py  triangle.py  wedge.py
test/: examples_test.py  helpers.py  test.py  test_adaptive.py  test_adaptive_c1.py  test_adaptive_line_segment.py  test_adaptive_t2.py  test_adaptive_triangle.py  test_ball.py  test_c1.py  test_c1_adaptive.py  test_c2.py  test_c3.py  test_circle.py  test_cn.py  test_disk.py  test_e1r.py  test_e1r2.py  test_e2r.py  test_e2r2.py  test_e3r.py  test_e3r2.py  test_enr.py  test_enr2.py  test_evaluate_monomials.py  test_hexahedron.py  test_line.py  test_line_segment.py  test_nball.py  test_ncube.py  test_nsimplex.py  test_nsphere.py  test_optimize.py  test_p3.py  test_pyramid.py  test_quadrilateral.py  test_readme.py  test_s2.py  test_s3.py  test_scipy.py  (+17 more)
tests/: examples_test.py  helpers.py  test_c1.py  test_c1_adaptive.py  test_c3.py  test_cn.py  test_e1r.py  test_e3r.py  test_e3r2.py  test_enr.py  test_enr2.py  test_evaluate_monomials.py  test_p3.py  test_s2.py  test_s3.py  test_scipy.py  test_sn.py  test_t2_adaptive.py  test_t3.py  test_tn.py  test_tools.py  test_u3.py  test_w3.py
tools/: cartesian_to_barycentric.py  cartesian_to_barycentric_tri.py  compare.py  generate-readme-plots.py  import_helpers.py  import_lebedev.py  import_papanicolopulos.py  import_witherden_vincent.py  improve-precision-sphere.py  improve_precision.py  lebedev_code_generator.py  logo.py  modepy_import.py  show.py  sphere_leastsq.py  weights_from_least_squares.py
(+2077 files in other folders)
