[metadata]
name = quadpy
version = 0.14.5
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Numerical integration, quadrature for various domains
url = https://github.com/nschloe/quadpy
project_urls =
    Code=https://github.com/nschloe/quadpy
    Issues=https://github.com/nschloe/quadpy/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
# importlib_metadata can be removed when we support Python 3.8+ only
install_requires =
    importlib_metadata
    numpy
    orthopy >=0.6.2, <0.7
    scipy
    sympy
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.extras_require]
all = matplotlib
plot = matplotlib

[options.package_data]
* =
    *.json
