[metadata]
name = quadpy
version = 0.16.5
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Numerical integration, quadrature for various domains
url = https://github.com/nschloe/quadpy
project_urls =
    Code=https://github.com/nschloe/quadpy
    Issues=https://github.com/nschloe/quadpy/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
keywords =
    mathematics
    physics
    engineering
    quadrature
    cubature
    integration
    numerical integration

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    ndim
    numpy
    orthopy >=0.8.3, <0.9
    scipy
    sympy
python_requires = >=3.6

[options.extras_require]
all =
  matplotlib
  vtk
plot =
  matplotlib
  vtk

[options.package_data]
* =
    *.json


[options.entry_points]
console_scripts =
    quadpy-optimize = quadpy._cli:main
